--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.0.5",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "cors": "^2.8.5"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.5"
   }
 }
